# DoodleParty

./: .cleanup_summary.txt  .envrc  .gitignore  BOUNCING_VALIDATION_FIX.md  CHANGELOG.md  COMPLETE_FIX_SUMMARY.md  DATA_QUALITY_FIXES.md  FINAL_TEST_RESULTS.md  GITHUB_CHECKLIST.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_QUICKSTART.md  INTERFACE_SETUP_SUMMARY.txt  INTERFACE_VISUAL_GUIDE.md  LANDING_PAGE.md  LICENSE  LOADER_ENHANCEMENT_SUMMARY.md  LOADER_IMPROVEMENTS.md  MOBILE_RESPONSIVE.md  NIX_README.md  PENIS_DATA_FIX_SUMMARY.md  PREPROCESSING_FIX.md  README.md  REFACTORING_SUMMARY.md  REPROCESSED_PENIS_DATA.md  RETRAINING_SUMMARY.md  ROADMAP.md  STYLE_GUIDE.md  TEST_RESULTS_SUMMARY.md  TRAINING_REPORT.md  TRAINING_SESSION_NOTES.md  VALIDATION_FIX_SUMMARY.md  VISUALIZATION_GUIDE.md  check_training_data.py  create_comprehensive_visualization.py  debug_raw_data.py  default.nix  eslint.config.js  express-server.cjs  express-server.js  (+25 more)
.claude/: settings.local.json
.documentation/: api.md  architecture.md  design.md  installation.md  ml-pipeline.md  model_improvements.md  nix-usage.md  region_detection.md  roadmap.md  structure.md  testing.md  troubleshooting.md
.github/: copilot-instructions.md
.github/workflows/: convert_to_onnx.yml  deploy.yml  test.yml
.kilocode/: mcp.json
app/: README.md  app.py
app/static/: script.js  style.css
app/templates/: index.html
data/processed_64x64/: class_mapping.pkl
docs/: IMPROVEMENT_ROADMAP.md  ML_API_DOCUMENTATION.md  QUICK_REFERENCE.md
doodle-drawing-app/: index.html
express_canvas/: drawing_sender.html  index.html
express_canvas/public/: doodleparty.html  drawing_sender.html  index.html
express_canvas/server/: express-server.cjs  start_express_canvas.sh
k8s/: configmap.yaml  deployment-ml.yaml  deployment-web.yaml  namespace.yaml  service.yaml
models/benchmarks/: benchmark_20251105_155404.json
public/: index.html
public/css/: main.css
scripts/: demo_region_detection.py  demo_tui.py  download_quickdraw.py  ensemble_model.py  evaluate.py  generate_hard_negatives.py  optimize_threshold.py  rpi4_optimize.sh  test_model.sh  test_model_improvements.py  train.py  train_ensemble.py  train_max_accuracy.sh
scripts/convert/: Dockerfile  README.md  benchmark_tflite.py  convert_to_onnx.py  convert_to_tflite.py  distill_model.py  optimize_graph.py  prune_model.py  quantize_int8.py
scripts/data_processing/: download_appendix.py  download_appendix.sh  download_quickdraw.py  download_quickdraw_gcs.py  download_quickdraw_ndjson.py  download_quickdraw_npy.py  download_with_curl.sh  fix_data_quality.py  process_all_data_128x128.py  regenerate_data_simple_norm.py  regenerate_training_data.py  reprocess_penis_ndjson.py  resize_dataset.py
scripts/demos/: demo_region_detection.py  run_interface.sh  train_max_accuracy.sh
scripts/deployment/: deploy-cloud.sh  deploy-rpi4.sh
scripts/evaluation/: benchmark_hierarchical_detection.py  benchmark_rpi4.py  benchmark_tile_detection.py  evaluate.py  optimize_threshold.py  test_model_improvements.py  test_time_augmentation.py
scripts/optimization/: data_flywheel_workflow.py  demo_data_flywheel.py  establish_baseline.py  performance_monitor.py
scripts/training/: create_demo_dataset.py  ensemble_model.py  generate_hard_negatives.py  generate_negatives.py  train.py  train_binary.py  train_binary_classifier.py  train_ensemble.py  train_mixed_dataset.py
scripts/visualization/: diagnose_data_issues.py  visualize_fixed_data.py  visualize_training_batches.py  visualize_training_data.py
server/: README.md  index.js
src/: App.test.tsx  App.tsx  __init__.py  appendix_loader.py  constants.tsx  dataset.py  download_quickdraw_gcs.py  download_quickdraw_npy.py  generate_negatives.py  index.css  index.tsx  main.tsx  optimize_threshold.py  predict.py  test_time_augmentation.py  train.py  types.ts
src-py/: __init__.py
src-py/core/: __init__.py  inference.py  models.py  shape_detection.py  training.py
src-py/data/: loaders.py
src-py/web/: app.py  routes.py
src/components/: AdminPanel.tsx  DrawerView.tsx  DrawingCanvas.tsx  GameModeSelector.tsx  InkMeter.tsx  Leaderboard.tsx  ModerationShield.tsx  Timer.tsx
src/context/: SharedCanvasContext.tsx
src/core/: __init__.py  batch_inference.py  content_removal.py  contour_detection.py  inference.py  models.py  optimization.py  patch_extraction.py  shape_types.py  (+7 more)
src_py/: __init__.py
tests/: __init__.py  conftest.py  test_smoke.py
user/: README.md  index.html
(+112 files in other folders)
