[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doodlehunter"
version = "1.0.0"
description = "Binary classification for drawing content moderation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pillow>=10.0.0",
    "flask>=2.0.0",
    "flask-cors",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/doodlehunter"
Documentation = "https://github.com/yourusername/doodlehunter/tree/main/docs"
Repository = "https://github.com/yourusername/doodlehunter"
Issues = "https://github.com/yourusername/doodlehunter/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    # Ignore all deprecation warnings from TensorFlow and its submodules
    "ignore::DeprecationWarning:tensorflow",
    "ignore:The distutils package is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    # Ignore Keras warnings about input_shape and PyDataset
    "ignore:Do not pass an `input_shape`:UserWarning",
    "ignore:Your `PyDataset` class should call:UserWarning",
    # Ignore scipy deprecation warnings - both general and specific
    "ignore::DeprecationWarning:scipy",
    "ignore:Please import `affine_transform`:DeprecationWarning",
    # Ignore scikit-learn precision warnings (expected in tests with limited data)
    "ignore:Precision is ill-defined:UserWarning",
    # Catch any remaining deprecation warnings from external libraries
    "ignore::DeprecationWarning:distutils",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
